--- a/produktliste.html
+++ b/produktliste.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="produktliste.css">
+    <link rel="stylesheet" href="global.css">
+    <script src="produktliste.js" defer></script>
+
 </head>
 
 <body>
@@ -13,14 +16,24 @@
     <main>
         <h1 class="recipesoverskridt">Recipes</h1>
         <div class="dropdown">
-            <p class="dropdownitem">Breakfast</p>
+            <a href="produktliste.html">All</a>
+            <a href="produktliste.html?category=Breakfast">Breakfast</a>
+            <a href="produktliste.html?category=Lunch">Lunch</a>
+            <a href="produktliste.html?category=Dinner">Dinner</a>
+            <a href="produktliste.html?category=Dessert">Dessert</a>
+            <a href="produktliste.html?category=Side Dish">Side Dish</a>
+            <a href="produktliste.html?category=Snack">Snacks</a>
+            <a href="produktliste.html?category=Appetizer">Appetizer</a>
+            <a href="produktliste.html?category=Beverage">Beverage</a>
+
+            <!-- <p class="dropdownitem">Breakfast</p>
             <p class="dropdownitem">Lunch</p>
             <p class="dropdownitem">Dinner</p>
             <p class="dropdownitem">Dessert</p>
             <p class="dropdownitem">Side Dish</p>
             <p class="dropdownitem">Snacks</p>
             <p class="dropdownitem">Appetizer</p>
-            <p class="dropdownitem">Beverage</p>
+            <p class="dropdownitem">Beverage</p> -->
 
         </div>
 
@@ -29,7 +42,7 @@
         </div>
     </main>
     <footer></footer>
-    <script src="/produktliste.js"></script>
+
 </body>
 
 
