--- a/produkt.html
+++ b/produkt.html
@@ -81,6 +81,17 @@
                 </div>
             </div> -->
         </div>
+        <div class="popup-container" id="popup">
+            <div class="popup">
+                <span class="close-btn" onclick="closePopup()">&times;</span>
+                <h2>Would you like to discover 100 more recipes?</h2>
+                <p>Then sign up for our newsletter and get access to even more delicious recipes!</p>
+                <form>
+                    <input type="email" placeholder="Email" required>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
