--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="grid">
             <h1>TASTY TABLE</h1>
             <div class="grid_billeder">
-                <img src="index_billeder/billede1.jpg" alt="billede">
-                <img src="index_billeder/billede2.jpg" alt="billede">
+                <img src="index_billeder/billede1.webp" alt="billede">
+                <img src="index_billeder/billede2.webp" alt="billede">
             </div>
         </div>
 
