--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="slideshow-container">
             <button class="nav-button left" onclick="moveSlide(-1)">&#10094;</button>
-            <section class="slideshow_forside" id="slideshow">
+            <div class="slideshow_forside" id="slideshow">
                 <!-- <div>
                     <a href="produkt.html">
                         <img src="https://cdn.dummyjson.com/recipe-images/1.webp" alt="billede">
@@ -95,7 +95,7 @@
                     </a>
                     <h3>Quinoa Salad with Avocado</h3>
                 </div> -->
-            </section>
+            </div>
             <button class="nav-button right" onclick="moveSlide(1)">&#10095;</button>
         </div>
     </main>
