--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <body>
     <header>
         <div class="logo2">
-            <a href="index.html"><img src="index_billeder/tastytable_logo.png" alt="logo"></a>
+            <a href="index.html"><img src="index_billeder/tastytable_logo.svg" alt="logo"></a>
         </div>
         <nav>
             <div class="menu">
                 <a href="index.html">Main</a>
                 <div class="logo">
-                    <a href="index.html"><img src="index_billeder/tastytable_logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="index_billeder/tastytable_logo.svg" alt="logo"></a>
                 </div>
                 <a href="produktliste.html">Recipes</a>
 
@@ -101,7 +101,7 @@
     </main>
     <footer class="footer">
         <div class="grid_1_1_1_1">
-            <a href="index.html"><img class="logofoot" src="index_billeder/tastytable_logo.png" alt="logo"></a>
+            <a href="index.html"><img class="logofoot" src="index_billeder/tastytable_logo.svg" alt="logo"></a>
             <div>
                 <div>
                     <p>+ 45 46 46 00 00</p>
