--- a/produktliste.html
+++ b/produktliste.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="produktliste.css">
     <link rel="stylesheet" href="global.css">
     <script src="produktliste.js" defer></script>
+    <script src="global.js" defer></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
